add conteudo ao portifolio

--- a/index.html
+++ b/index.html
@@ -45,24 +45,30 @@
         <article>
             <h2>Portifólio</h2>
             <section id="portifolio">
-                <!-- <div class="item-portifolio">
-                    <img src="portifolio/imagens/banner-paginapessoal.png" alt="Imagem do projeto">
-                    <h3>Página Pessoal</h3>
-                    <p>Minha página pessoal (está que você esta vendo) desenvolvida em HTML e CSS</p>
-                    <button type="button"><a href="portifolio/paginapessoal.html">Saiba Mais</a></button>
-                </div> -->
+                <div class="item-portifolio">
+                    <img src="portifolio/imagens/banner-algoritmogenetico.png" alt="Imagem do projeto">
+                    <h3>Algoritmo Genético</h3>
+                    <p>Projeto final desenvolvido para a disciplina de Computação II, ministrada pela professora Renata Coelho, no ano de 2024, na UTFPR.</p>
+                    <button type="button"><a href="portifolio/algoritmogenetico.html">Saiba Mais</a></button>
+                </div>
+                <div class="item-portifolio">
+                    <img src="portifolio/imagens/banner-controladortemperaturaumidade.png" alt="Imagem do projeto">
+                    <h3>Controlador de Temperatura e Umidade</h3>
+                    <p>Projeto final desenvolvido para a disciplina de Sistemas Digitais, ministrada pelo professor Delvanei Gomes, no ano de 2024, na UTFPR.</p>
+                    <button type="button"><a href="portifolio/controladortemperaturaumidade.html">Saiba Mais</a></button>
+                </div>
+                <div class="item-portifolio">
+                    <img src="portifolio/imagens/banner-pocman.png" alt="Imagem do projeto">
+                    <h3>Jogo 2D Pocman</h3>
+                    <p>Um jogo desenvolvido a partir da ideia do jogo eletrônico Pacman</p>
+                    <button type="button"><a href="portifolio/pocman.html">Saiba Mais</a></button>
+                </div>
                 <div class="item-portifolio">
                     <img src="portifolio/imagens/banner-quizvelozescuriosos.png" alt="Imagem do projeto">
                     <h3>Quiz Velozes e Curiosos</h3>
                     <p>Um quiz desenvolvido na linguagem C sobre qual personagem da saga Velozes e Furiosos você seria.</p>
                     <button type="button"><a href="portifolio/quizvelozesecuriosos.html">Saiba Mais</a></button>
                 </div>
-                <!-- <div class="item-portifolio">
-                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
-                    <h3>Template</h3>
-                    <p>Template template template template template template template template template template template template template template</p>
-                    <button type="button"><a href="portifolio/template.html">Saiba Mais</a></button>
-                </div> -->
                 <!-- <div class="item-portifolio">
                     <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
                     <h3>Template</h3>
