--- a/portifolio/algoritmogenetico.html
+++ b/portifolio/algoritmogenetico.html
@@ -16,27 +16,25 @@
     <header>
         <a class="voltar" href="https://dayana-freitas.github.io/dayana-freitas/"><img src="../imagens/icon-arrow-back.png" alt="Icone voltar"></a>
         <div id="banner-portifolio">
-            <img src="imagens/banner-paginapessoal.png" alt="Imagem da página principal da página pessoal de Dayana Freitas">
+            <img src="imagens/banner-algoritmogenetico.png" alt="IMagem mostrando o código genético sendo executado">
         </div>
     </header>
     <main>
         <article>
-            <h1>Página Pessoal</h1>
+            <h1>Algoritmo Genético</h1>
             <section>
                 <h2>Descrição</h2>
-                <p>Site desenvolvido em HTML semântico e CSS, para ser meu portifílio</p>
+                <p>Projeto desenvolvido para a matétia de Computação II com a professora Renata Coelho Borges na UTFPR em 2024-1.</p>
             </section>
             <section>
                 <h2>Como Instalar/Acessar</h2>
-                <p>No repositório disponível no GitHub é possível encontrar todo o código fonte, os arquivos de template de páginas e até mesmo fazer um Fork para o seu GitHub para usa-lo de base.</p>
-                <p><a href="https://github.com/dayana-freitas/dayana-freitas">LINK DO REPOSITÓRIO NO GITHUB</a></p>
+                <p>Para executa-lo basta rodar o arquivo projeto.c em qualquer compilador C.</p>
+                <p><a href="https://github.com/dayana-freitas/algoritmogenetico" target="_blank">LINK DO REPOSITÓRIO NO GITHUB</a></p>
             </section>
             <section>
                 <h2>Linguagens e bibliotecas usadas no desenvolvimento</h2>
                 <ul>                    
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                    <li>Fontes do Google</li>
+                    <li>Linguagem C</li>
                 </ul>
             </section>
         </article>
@@ -56,16 +54,16 @@
                         <label class="bar bar4" for="slide4"></label>
                     </div>
                     <div class="slide s1">
-                        <img src="imagens/carrossel/pagina-pessoal-img1.png" alt="Imagem um do template">
+                        <img src="imagens/carrossel/algoritmo-genetico-img1.png" alt="Imagem do projeto sendo executado">
                     </div>
                     <div class="slide">
-                        <img src="imagens/carrossel/pagina-pessoal-img2.png" alt="Imagem dois do template">
+                        <img src="imagens/carrossel/algoritmo-genetico-img2.png" alt="Imagem de apresentação do projeto">
                     </div>
                     <div class="slide">
-                        <img src="imagens/carrossel/pagina-pessoal-img3.png" alt="Imagem três do template">
+                        <img src="imagens/carrossel/algoritmo-genetico-img3.png" alt="Imagem das funções do projeto">
                     </div>
                     <div class="slide">
-                        <img src="imagens/carrossel//pagina-pessoal-img4.png" alt="Imagem quatro do template">
+                        <img src="imagens/carrossel/algoritmo-genetico-img4.png" alt="Imagem dos requisitos do projeto">
                     </div>
                 </div>
             </div>
