--- a/portifolio/pocman.html
+++ b/portifolio/pocman.html
@@ -16,26 +16,26 @@
     <header>
         <a class="voltar" href="https://dayana-freitas.github.io/dayana-freitas/"><img src="../imagens/icon-arrow-back.png" alt="Icone voltar"></a>
         <div id="banner-portifolio">
-            <img src="imagens/banner-template.jpg" alt="Descrição do Banner">
+            <img src="imagens/banner-pocman.png" alt="Descrição do Banner">
         </div>
     </header>
     <main>
         <article>
-            <h1>Titulo</h1>
+            <h1>Jogo 2D Pocman</h1>
             <section>
                 <h2>Descrição</h2>
-                <p>Descrição do Projeto</p>
+                <p>Projeto II desenvolvido para a disciplina de Computação I, ministrada pelos professores Leonelo e Marília, no ano de 2023, na UTFPR.</p>
+                <p>Jogo 2D, com idéia baseada no jogo eletrônico PACMAN</p>
             </section>
             <section>
                 <h2>Como Instalar/Acessar</h2>
-                <p>Descrição do Projeto</p>
-                <p><a href="" target="_blank" rel="noopener noreferrer">LINK DO REPOSITÓRIO NO GITHUB</a></p>
+                <p>Para acessar o jogo, basta executar o arquivo pocman.c em qualquer compilador C</p>
+                <p><a href="https://github.com/dayana-freitas/jogopocman" target="_blank" rel="noopener noreferrer">LINK DO REPOSITÓRIO NO GITHUB</a></p>
             </section>
             <section>
                 <h2>Linguagens e bibliotecas usadas no desenvolvimento</h2>
                 <ul>                    
-                    <li>Linguagem 1</li>
-                    <li>Linguagem 2</li>
+                    <li>Linguagem C</li>
                 </ul>
             </section>
         </article>
@@ -47,29 +47,19 @@
                     <input type="radio" name="slide" id="slide1" checked>
                     <input type="radio" name="slide" id="slide2">
                     <input type="radio" name="slide" id="slide3">
-                    <input type="radio" name="slide" id="slide4">
-                    <input type="radio" name="slide" id="slide5">
                     <div class="navigation">
                         <label class="bar bar1" for="slide1"></label>
                         <label class="bar bar2" for="slide2"></label>
                         <label class="bar bar3" for="slide3"></label>
-                        <label class="bar bar4" for="slide4"></label>
-                        <label class="bar bar5" for="slide5"></label>
                     </div>
                     <div class="slide s1">
-                        <img src="imagens/carrossel/template-img1.jpg" alt="Imagem um do template">
+                        <img src="imagens/carrossel/pocman-img1.png" alt="Imagem um do template">
                     </div>
                     <div class="slide">
-                        <img src="imagens/carrossel/template-img2.jpg" alt="Imagem dois do template">
+                        <img src="imagens/carrossel/pocman-img2.png" alt="Imagem dois do template">
                     </div>
                     <div class="slide">
-                        <img src="imagens/carrossel/template-img3.jpg" alt="Imagem três do template">
-                    </div>
-                    <div class="slide">
-                        <img src="imagens/carrossel/template-img4.jpg" alt="Imagem quatro do template">
-                    </div>
-                    <div class="slide">
-                        <img src="imagens/carrossel/template-img5.jpg" alt="Imagem cinco do template">
+                        <img src="imagens/carrossel/pocman-img3.png" alt="Imagem três do template">
                     </div>
                 </div>
             </div>
