atualizacoes index e portifolio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div id="introducao">
-            <h1>Dayana Freitas</h1>
+            <h1 id="nome">Dayana Freitas</h1>
             <p>Cursando Engenharia Elétrica na UTFPR | Técnica em Desenvolvimento de Sistemas pela Etec de Registro</p>
         </div>
         <div id="avatar">
@@ -25,26 +25,39 @@
             <section id="sobre">
                 <h2>Sobre mim</h2>
                 <p>
-                    Sou uma profissional dedicada, com comprovada excelência acadêmica e habilidades de liderança. Conquistei duas medalhas de Prata nas Olimpíadas Brasileiras de Matemática das Escolas Públicas (OBMEP) e em 2021 me formei em Desenvolvimento de Sistemas pela ETEC de Registro. Demonstrei rápida progressão profissional ao assumir a gerência de um Sacolão em Pariquera-Açu/SP, após apenas seis meses de trabalho. Em 2023, fui aprovada pelo SISU e passei a cursar Engenharia Elétrica na Universidade Tecnológica Federal do Paraná (UTFPR) em Curitiba, onde atualmente resido e me dedico ao meu aprimoramento técnico e profissional.
+                    Guria sorridente e animada, amo música e um fone de ouvido sempre me acompanha. Além da tecnologia e engenharia, também gosto muito de cozinhar e tenho muita habilidade com costura, que inclusive já foi minha principal fonte de renda por alguns meses. 
                 </p>
-                <!-- <p>
-                    Atualmente, além da minha graduação estou me dedicando também ao estudo de programação e desenvolvimento. No meu GitHub tenho alguns projetos que já fiz durante o curso técnico e alguns novos nos quais estou trabalhando ou fazendo durante a faculdade. Um deles é o desenvolvimento de um repositório sobre HTML semântico.
-                </p> -->
+                <p>
+                    Minha entrada no mundo da TI e da engenharia se deu em 2019, quando ingressei na Etec de Registro para cursar técnico em desenvolvimento de sistemas junto ao ensino médio. Nessa época, comecei a gostar cada vez mais de tecnologia, programação e vida acadêmica. Por conta da pandemia e dificuldades familiares, em 2022, mesmo tendo sido aprovada para bacharelado em sistemas de informação na UTFPR, acabei não me matriculando e comecei a trabalhar em um sacolão, onde tive grande aprendizado e desenvolvi diversas habilidades, como comunicação, vendas e gestão.
+                </p>
+                <p>
+                    Em 2023, entrei no SISU novamente e, dessa vez, fui aprovada em Engenharia Elétrica na UTFPR. A partir daí, mudei-me para Curitiba, uma cidade incrível, onde resido, trabalho e estudo até hoje. A jornada não é fácil, o mundo universitário é mais desafiador que o ensino médio e o técnico, mas, com o tempo, a gente vai aprendendo e se adaptando.
+                </p>
+                <p>
+                    Ao longo desses dois anos na faculdade, participei e, junto à minha dupla, passei para a segunda fase da UTFdx, um campeonato de derivadas que acontece dentro da faculdade. Atuei como bolsista em um programa de apoio aos departamentos, onde fiquei responsável por alguns laboratórios de informática da faculdade, ampliando meus conhecimentos em softwares, hardware e manutenção. Atualmente, estou estagiando no setor de redes da faculdade e aprendendo sobre manutenção e suporte nessa área.
+                </p>
+                <p>
+                    Além da graduação em engenharia elétrica, estudo programação e desenvolvimento no tempo livre. No meu GitHub, tenho alguns projetos que já fiz durante o curso técnico e alguns novos nos quais estou trabalhando ou desenvolvendo durante a faculdade.
+                </p>
             </section>
-            <section>
+            <!-- <section>
                 <h2>Habilidades</h2>
                 <ul>
                     <li>Linguagem C</li>
                     <li>HTML5</li>
-                    <li>CSS3</li>                    
-                    <li>PHP</li>
-                    <li>JavaScript</li>
+                    <li>CSS3</li>          
                 </ul>
-            </section>
+            </section> -->
         </article>
         <article>
             <h2>Portifólio</h2>
             <section id="portifolio">
+                <div class="item-portifolio">
+                    <img src="portifolio/imagens/banner-controlador-temperatura-umidade-stm.png" alt="Imagem do projeto">
+                    <h3>Controlador de Temperatura e Umidade com STM32F411</h3>
+                    <p>Projeto final desenvolvido para a disciplina de Sistemas Microcontrolados, ministrada pelo professor Delvanei Gomes Bandeira Jr, no ano de 2024/2025, na UTFPR.</p>
+                    <button type="button"><a href="portifolio/controladortemperaturaumidadestm.html">Saiba Mais</a></button>
+                </div>
                 <div class="item-portifolio">
                     <img src="portifolio/imagens/banner-algoritmogenetico.png" alt="Imagem do projeto">
                     <h3>Algoritmo Genético</h3>
@@ -53,7 +66,7 @@
                 </div>
                 <div class="item-portifolio">
                     <img src="portifolio/imagens/banner-controladortemperaturaumidade.png" alt="Imagem do projeto">
-                    <h3>Controlador de Temperatura e Umidade</h3>
+                    <h3>Controlador de Temperatura e Umidade com Arduíno</h3>
                     <p>Projeto final desenvolvido para a disciplina de Sistemas Digitais, ministrada pelo professor Delvanei Gomes, no ano de 2024, na UTFPR.</p>
                     <button type="button"><a href="portifolio/controladortemperaturaumidade.html">Saiba Mais</a></button>
                 </div>
@@ -68,6 +81,12 @@
                     <h3>Quiz Velozes e Curiosos</h3>
                     <p>Um quiz desenvolvido na linguagem C sobre qual personagem da saga Velozes e Furiosos você seria.</p>
                     <button type="button"><a href="portifolio/quizvelozesecuriosos.html">Saiba Mais</a></button>
+                </div>
+                <div class="item-portifolio">
+                    <img src="portifolio/imagens/banner-sitepessoal.png" alt="Imagem do projeto">
+                    <h3>Página Pessoal</h3>
+                    <p>Página pessoal desenvolvido em HTML CSS e JavaScript e hospedado no GitHub Pages</p>
+                    <button type="button"><a href="portifolio/sitepessoal.html">Saiba Mais</a></button>
                 </div>
                 <!-- <div class="item-portifolio">
                     <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
