--- a/portifolio/controladortemperaturaumidade.html
+++ b/portifolio/controladortemperaturaumidade.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <article>
-            <h1>Controlador de Temperatura e Umidade</h1>
+            <h1>Controlador de Temperatura e Umidade com Arduíno</h1>
             <section>
                 <h2>Descrição</h2>
                 <p>O projeto foi desenvolvido com base no controlador de temperatura e umidade N323-RHT, da marca Novus, que possui três saídas de controle e pode ser configurado manualmente. Utilizando esse controlador como referência, criamos o protótipo que será apresentado, o qual possui funções para definir a temperatura e umidade mínima e máxima de acordo com as necessidades do usuário. As saídas do sistema serão utilizadas para ativar a irrigação, o aquecimento e a refrigeração da estufa conforme os parâmetros cadastrados.</p>
